--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "chai-http": "^3.0.0",
+    "cors": "^2.8.4",
     "express": "^4.16.1",
     "mocha": "^3.5.3",
     "mongoose": "^4.11.13",
