--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "body-parser": "^1.18.2",
     "chai-http": "^3.0.0",
     "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.16.1",
     "mocha": "^3.5.3",
     "mongoose": "^4.11.13",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0"
   },
   "dev-dependencies": {
     "start": "node server.js",
