--- a/package.json
+++ b/package.json
@@ -23,17 +23,16 @@
   "homepage": "https://github.com/ZipClips/newco#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "chai-http": "^3.0.0",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.1",
-    "mocha": "^3.5.3",
     "mongoose": "^4.11.13",
     "morgan": "^1.9.0",
     "passport": "^0.4.0"
   },
-  "dev-dependencies": {
-    "start": "node server.js",
-    "test": "mocha"
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.5.3"
   }
 }
